@@ -2,6 +2,8 @@ package uk.gov.hmcts.reform.civil.handler.callback.user;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
 import uk.gov.hmcts.reform.ccd.client.model.CallbackResponse;
@@ -11,32 +13,44 @@ import uk.gov.hmcts.reform.civil.callback.CallbackHandler;
 import uk.gov.hmcts.reform.civil.callback.CallbackParams;
 import uk.gov.hmcts.reform.civil.callback.CaseEvent;
 import uk.gov.hmcts.reform.civil.enums.CaseState;
+import uk.gov.hmcts.reform.civil.enums.GADebtorPaymentPlanGAspec;
 import uk.gov.hmcts.reform.civil.enums.YesOrNo;
+import uk.gov.hmcts.reform.civil.enums.dq.GeneralApplicationTypes;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
+import uk.gov.hmcts.reform.civil.helpers.DateFormatHelper;
+import uk.gov.hmcts.reform.civil.model.BusinessProcess;
 import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.model.GARespondentRepresentative;
 import uk.gov.hmcts.reform.civil.model.LocationRefData;
 import uk.gov.hmcts.reform.civil.model.common.DynamicList;
 import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
 import uk.gov.hmcts.reform.civil.model.common.Element;
+import uk.gov.hmcts.reform.civil.model.documents.Document;
 import uk.gov.hmcts.reform.civil.model.genapplication.GAHearingDetails;
+import uk.gov.hmcts.reform.civil.model.genapplication.GARespondentDebtorOfferGAspec;
 import uk.gov.hmcts.reform.civil.model.genapplication.GARespondentResponse;
 import uk.gov.hmcts.reform.civil.model.genapplication.GAUnavailabilityDates;
+import uk.gov.hmcts.reform.civil.service.CoreCaseDataService;
+import uk.gov.hmcts.reform.civil.service.GaForLipService;
 import uk.gov.hmcts.reform.civil.service.GeneralAppLocationRefDataService;
-import uk.gov.hmcts.reform.civil.service.ParentCaseUpdateHelper;
+import uk.gov.hmcts.reform.civil.utils.DocUploadUtils;
+import uk.gov.hmcts.reform.civil.utils.JudicialDecisionNotificationUtil;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
-import uk.gov.hmcts.reform.idam.client.models.UserDetails;
+import uk.gov.hmcts.reform.idam.client.models.UserInfo;
 
+import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.LocalDate;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static com.google.common.collect.Lists.newArrayList;
 import static java.lang.String.format;
+import static java.time.LocalDate.now;
 import static java.util.Optional.ofNullable;
 import static org.springframework.util.CollectionUtils.isEmpty;
 import static uk.gov.hmcts.reform.civil.callback.CallbackParams.Params.BEARER_TOKEN;
@@ -45,22 +59,26 @@ import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.MID;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.SUBMITTED;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.RESPOND_TO_APPLICATION;
-import static uk.gov.hmcts.reform.civil.enums.CaseState.APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION;
-import static uk.gov.hmcts.reform.civil.enums.CaseState.AWAITING_RESPONDENT_RESPONSE;
+import static uk.gov.hmcts.reform.civil.callback.CaseEvent.RESPOND_TO_APPLICATION_URGENT_LIP;
+import static uk.gov.hmcts.reform.civil.enums.GADebtorPaymentPlanGAspec.PAYFULL;
+import static uk.gov.hmcts.reform.civil.enums.GARespondentDebtorOfferOptionsGAspec.ACCEPT;
+import static uk.gov.hmcts.reform.civil.enums.GARespondentDebtorOfferOptionsGAspec.DECLINE;
+import static uk.gov.hmcts.reform.civil.enums.YesOrNo.NO;
 import static uk.gov.hmcts.reform.civil.enums.YesOrNo.YES;
 import static uk.gov.hmcts.reform.civil.model.common.DynamicList.fromList;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.element;
-import static uk.gov.hmcts.reform.civil.utils.RespondentsResponsesUtil.isRespondentsResponseSatisfied;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class RespondToApplicationHandler extends CallbackHandler {
 
     private final ObjectMapper objectMapper;
     private final CaseDetailsConverter caseDetailsConverter;
-    private final ParentCaseUpdateHelper parentCaseUpdateHelper;
     private final IdamClient idamClient;
     private final GeneralAppLocationRefDataService locationRefDataService;
+    private final CoreCaseDataService coreCaseDataService;
+    private final GaForLipService gaForLipService;
 
     private static final String RESPONSE_MESSAGE = "# You have provided the requested information";
     private static final String JUDGES_REVIEW_MESSAGE =
@@ -83,14 +101,18 @@ public class RespondToApplicationHandler extends CallbackHandler {
     public static final String APPLICATION_RESPONSE_PRESENT = "The General Application has already "
         +  "received a response.";
     public static final String RESPONDENT_RESPONSE_EXISTS = "The application has already been responded to.";
+    public static final String PAYMENT_DATE_CANNOT_BE_IN_PAST =
+        "The date entered cannot be in the past.";
 
     public static final String PREFERRED_TYPE_IN_PERSON = "IN_PERSON";
-    private static final List<CaseEvent> EVENTS = Collections.singletonList(RESPOND_TO_APPLICATION);
+    private static final List<CaseEvent> EVENTS =
+        List.of(RESPOND_TO_APPLICATION, RESPOND_TO_APPLICATION_URGENT_LIP);
 
     @Override
     protected Map<String, Callback> callbacks() {
         return Map.of(
             callbackKey(ABOUT_TO_START), this::applicationValidation,
+            callbackKey(MID, "validate-debtor-offer"), this::validateDebtorOffer,
             callbackKey(MID, "hearing-screen-response"), this::hearingScreenResponse,
             callbackKey(ABOUT_TO_SUBMIT), this::submitClaim,
             callbackKey(SUBMITTED), this::buildResponseConfirmation
@@ -101,6 +123,14 @@ public class RespondToApplicationHandler extends CallbackHandler {
         CaseData caseData = callbackParams.getCaseData();
         CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
         String authToken = callbackParams.getParams().get(BEARER_TOKEN).toString();
+
+        if (caseData.getGeneralAppType().getTypes().contains(GeneralApplicationTypes.VARY_PAYMENT_TERMS_OF_JUDGMENT)
+            && caseData.getParentClaimantIsApplicant().equals(NO)) {
+            caseDataBuilder.generalAppVaryJudgementType(YesOrNo.YES);
+        } else {
+            caseDataBuilder.generalAppVaryJudgementType(NO);
+        }
+
         caseDataBuilder
             .hearingDetailsResp(
                 GAHearingDetails
@@ -115,11 +145,25 @@ public class RespondToApplicationHandler extends CallbackHandler {
             .build();
     }
 
+    private CallbackResponse validateDebtorOffer(CallbackParams callbackParams) {
+        CaseData caseData = callbackParams.getCaseData();
+        ArrayList<String> errors = new ArrayList<>();
+        if (ofNullable(caseData.getGaRespondentDebtorOffer()).isPresent()
+            && caseData.getGaRespondentDebtorOffer().getRespondentDebtorOffer().equals(DECLINE)
+            && caseData.getGaRespondentDebtorOffer().getPaymentPlan().equals(PAYFULL)
+            && !now().isBefore(caseData.getGaRespondentDebtorOffer().getPaymentSetDate())) {
+            errors.add(PAYMENT_DATE_CANNOT_BE_IN_PAST);
+        }
+
+        return AboutToStartOrSubmitCallbackResponse.builder()
+            .errors(errors)
+            .build();
+    }
+
     private DynamicList getLocationsFromList(final List<LocationRefData> locations) {
         return fromList(locations.stream().map(location -> new StringBuilder().append(location.getSiteName())
                 .append(" - ").append(location.getCourtAddress())
-                .append(" - ").append(location.getPostcode()).toString())
-                            .collect(Collectors.toList()));
+                .append(" - ").append(location.getPostcode()).toString()).toList());
     }
 
     @Override
@@ -129,7 +173,6 @@ public class RespondToApplicationHandler extends CallbackHandler {
 
     private SubmittedCallbackResponse buildResponseConfirmation(CallbackParams callbackParams) {
         CaseData caseData = callbackParams.getCaseData();
-
         return SubmittedCallbackResponse.builder()
             .confirmationHeader(RESPONSE_MESSAGE)
             .confirmationBody(buildConfirmationSummary(caseData))
@@ -138,12 +181,14 @@ public class RespondToApplicationHandler extends CallbackHandler {
 
     public List<String> applicationExistsValidation(CallbackParams callbackParams) {
         CaseData caseData = callbackParams.getCaseData();
-        UserDetails userDetails = idamClient.getUserDetails(callbackParams.getParams().get(BEARER_TOKEN).toString());
-        List<Element<GARespondentResponse>> respondentResponse = caseData.getRespondentsResponses();
+        UserInfo userInfo = idamClient.getUserInfo(callbackParams.getParams().get(BEARER_TOKEN).toString());
 
+        List<Element<GARespondentResponse>> respondentResponse = caseData.getRespondentsResponses();
+        boolean isNotAllowedForLip =
+            gaForLipService.isLipResp(caseData) && JudicialDecisionNotificationUtil.isUrgent(caseData);
         List<String> errors = new ArrayList<>();
         if (caseData.getCcdState() == CaseState
-            .APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION
+            .APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION && !isNotAllowedForLip
         ) {
             errors.add(APPLICATION_RESPONSE_PRESENT);
         }
@@ -151,7 +196,7 @@ public class RespondToApplicationHandler extends CallbackHandler {
             Optional<Element<GARespondentResponse>> respondentResponseElement = respondentResponse.stream().findAny();
             if (respondentResponseElement.isPresent()) {
                 String respondentResponseId = respondentResponseElement.get().getValue().getGaRespondentDetails();
-                if (respondentResponseId.equals(userDetails.getId())) {
+                if (respondentResponseId.equals(userInfo.getUid())) {
                     errors.add(RESPONDENT_RESPONSE_EXISTS);
                 }
             }
@@ -191,31 +236,44 @@ public class RespondToApplicationHandler extends CallbackHandler {
                                     List<Element<GAUnavailabilityDates>> datesUnavailableList) {
 
         if (YES.equals(isTrialScheduled)) {
-            if (trialDateFrom != null) {
-                if (trialDateTo != null && trialDateTo.isBefore(trialDateFrom)) {
-                    errors.add(INVALID_TRIAL_DATE_RANGE);
-                } else if (trialDateFrom.isBefore(LocalDate.now())) {
-                    errors.add(INVALID_TRAIL_DATE_FROM_BEFORE_TODAY);
-                }
-            } else {
-                errors.add(TRIAL_DATE_FROM_REQUIRED);
-            }
+            checkTrialScheduled(errors,
+                    trialDateFrom,
+                    trialDateTo);
         }
 
         if (YES.equals(isUnavailable)) {
-            if (isEmpty(datesUnavailableList)) {
-                errors.add(UNAVAILABLE_DATE_RANGE_MISSING);
-            } else {
-                for (Element<GAUnavailabilityDates> dateRange : datesUnavailableList) {
-                    LocalDate dateFrom = dateRange.getValue().getUnavailableTrialDateFrom();
-                    LocalDate dateTo = dateRange.getValue().getUnavailableTrialDateTo();
-                    if (dateFrom == null) {
-                        errors.add(UNAVAILABLE_FROM_MUST_BE_PROVIDED);
-                    } else if (dateTo != null && dateTo.isBefore(dateFrom)) {
-                        errors.add(INVALID_UNAVAILABILITY_RANGE);
-                    } else if (dateFrom.isBefore(LocalDate.now())) {
-                        errors.add(INVALID_UNAVAILABLE_DATE_FROM_BEFORE_TODAY);
-                    }
+            checkUnavailable(errors, datesUnavailableList);
+        }
+    }
+
+    private void checkTrialScheduled(List<String> errors,
+                                     LocalDate trialDateFrom,
+                                     LocalDate trialDateTo) {
+        if (trialDateFrom != null) {
+            if (trialDateTo != null && trialDateTo.isBefore(trialDateFrom)) {
+                errors.add(INVALID_TRIAL_DATE_RANGE);
+            } else if (trialDateFrom.isBefore(LocalDate.now())) {
+                errors.add(INVALID_TRAIL_DATE_FROM_BEFORE_TODAY);
+            }
+        } else {
+            errors.add(TRIAL_DATE_FROM_REQUIRED);
+        }
+    }
+
+    private void checkUnavailable(List<String> errors,
+                                  List<Element<GAUnavailabilityDates>> datesUnavailableList) {
+        if (isEmpty(datesUnavailableList)) {
+            errors.add(UNAVAILABLE_DATE_RANGE_MISSING);
+        } else {
+            for (Element<GAUnavailabilityDates> dateRange : datesUnavailableList) {
+                LocalDate dateFrom = dateRange.getValue().getUnavailableTrialDateFrom();
+                LocalDate dateTo = dateRange.getValue().getUnavailableTrialDateTo();
+                if (dateFrom == null) {
+                    errors.add(UNAVAILABLE_FROM_MUST_BE_PROVIDED);
+                } else if (dateTo != null && dateTo.isBefore(dateFrom)) {
+                    errors.add(INVALID_UNAVAILABILITY_RANGE);
+                } else if (dateFrom.isBefore(LocalDate.now())) {
+                    errors.add(INVALID_UNAVAILABLE_DATE_FROM_BEFORE_TODAY);
                 }
             }
         }
@@ -236,28 +294,45 @@ public class RespondToApplicationHandler extends CallbackHandler {
 
         CaseData caseData = caseDetailsConverter.toCaseData(callbackParams.getRequest().getCaseDetails());
         CaseData.CaseDataBuilder caseDataBuilder = caseData.toBuilder();
-        UserDetails userDetails = idamClient.getUserDetails(callbackParams.getParams().get(BEARER_TOKEN).toString());
 
+        UserInfo userInfo = idamClient.getUserInfo(callbackParams.getParams().get(BEARER_TOKEN).toString());
+        String userId = userInfo.getUid();
         List<Element<GARespondentResponse>> respondentsResponses =
-            addResponse(buildResponse(caseData, userDetails), caseData.getRespondentsResponses());
+            addResponse(buildResponse(caseData, userInfo), caseData.getRespondentsResponses());
 
         caseDataBuilder.respondentsResponses(respondentsResponses);
-        caseDataBuilder.hearingDetailsResp(populateHearingDetailsResp(caseData));
+        caseDataBuilder.hearingDetailsResp(null); // Empty HearingDetails Respondent details as its added in the field RespondetsResponses collection
         caseDataBuilder.generalAppRespondent1Representative(GARespondentRepresentative.builder().build());
+        caseDataBuilder.gaRespondentConsent(null);
+        caseDataBuilder.generalAppRespondReason(null);
+        caseDataBuilder.generalAppRespondConsentReason(null);
+        String role = DocUploadUtils.getUserRole(caseData, userId);
+        addResponseDoc(caseDataBuilder, caseData, role);
+        caseDataBuilder.generalAppRespondDocument(null);
+        caseDataBuilder.generalAppRespondConsentDocument(null);
+        caseDataBuilder.generalAppRespondDebtorDocument(null);
+        caseDataBuilder.businessProcess(BusinessProcess.ready(RESPOND_TO_APPLICATION)).build();
+
         CaseData updatedCaseData = caseDataBuilder.build();
 
-        CaseState newState = isRespondentsResponseSatisfied(caseData, updatedCaseData)
-            ? APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION
-            : AWAITING_RESPONDENT_RESPONSE;
-        parentCaseUpdateHelper.updateParentWithGAState(caseData, newState.getDisplayedValue());
-
         return AboutToStartOrSubmitCallbackResponse.builder()
-            .state(newState.toString())
             .data(updatedCaseData.toMap(objectMapper))
             .build();
     }
 
-    private GAHearingDetails populateHearingDetailsResp(CaseData caseData) {
+    private void addResponseDoc(CaseData.CaseDataBuilder caseDataBuilder, CaseData caseData, String role) {
+        List<Element<Document>> documents = caseData.getGeneralAppRespondDocument();
+        if (Objects.isNull(documents)) {
+            documents = caseData.getGeneralAppRespondConsentDocument();
+        }
+        if (Objects.isNull(documents)) {
+            documents = caseData.getGeneralAppRespondDebtorDocument();
+        }
+        DocUploadUtils.addDocumentToAddl(caseData, caseDataBuilder,
+                documents, role, CaseEvent.RESPOND_TO_APPLICATION, false);
+    }
+
+    private GAHearingDetails populateHearingDetailsResp(CaseData caseData, UserInfo userInfo) {
         GAHearingDetails gaHearingDetailsResp;
         String preferredType = caseData.getHearingDetailsResp().getHearingPreferencesPreferredType().name();
         if (preferredType.equals(PREFERRED_TYPE_IN_PERSON)
@@ -270,13 +345,62 @@ public class RespondToApplicationHandler extends CallbackHandler {
                 .filter(l -> l.getLabel().equals(applicationLocationLabel)).findFirst();
             first.ifPresent(dynamicLocationList::setValue);
             gaHearingDetailsResp = caseData.getHearingDetailsResp().toBuilder()
+                .respondentResponsePartyName(getRespondentResponsePartyName(caseData, userInfo))
                 .hearingPreferredLocation(dynamicLocationList).build();
 
         } else {
             gaHearingDetailsResp = caseData.getHearingDetailsResp().toBuilder()
+                .respondentResponsePartyName(getRespondentResponsePartyName(caseData, userInfo))
                 .hearingPreferredLocation(DynamicList.builder().build()).build();
         }
         return gaHearingDetailsResp;
+    }
+
+    private String getRespondentResponsePartyName(CaseData gaCaseData, UserInfo userInfo) {
+
+        CaseData civilCaseData = caseDetailsConverter
+            .toCaseData(coreCaseDataService
+                            .getCase(Long.parseLong(gaCaseData.getGeneralAppParentCaseLink().getCaseReference())));
+
+        return checkIfEmailIdMatch(userInfo, civilCaseData, gaCaseData);
+    }
+
+    private String checkIfEmailIdMatch(UserInfo userInfo,
+                                       CaseData civilCaseData, CaseData gaCaseData) {
+
+        // civil claim claimant
+        if (!gaCaseData.getParentClaimantIsApplicant().equals(YES)
+            && (Objects.nonNull(civilCaseData.getApplicantSolicitor1UserDetails())
+            && userInfo.getSub().equals(civilCaseData.getApplicantSolicitor1UserDetails().getEmail())
+            || gaForLipService.isLipResp(gaCaseData))) {
+
+            log.info("Return Civil Claim Defendant two party Name if GA Solicitor Email ID "
+                         + "as same as Civil Claim Claimant Solicitor Two Email");
+
+            return gaCaseData.getClaimant1PartyName() + " - Claimant";
+        }
+
+        // Civil Claim Defendant 1
+        if (userInfo.getSub().equals(civilCaseData.getRespondentSolicitor1EmailAddress())) {
+
+            log.info("Return Civil Claim Defendant One party Name if GA Solicitor Email ID "
+                         + "as same as Civil Claim Respondent Solicitor Two Email");
+
+            return gaCaseData.getDefendant1PartyName() + " - Defendant";
+        }
+
+        // civil claim defendant 2
+        if (YES.equals(gaCaseData.getIsMultiParty())
+            && NO.equals(civilCaseData.getRespondent2SameLegalRepresentative())
+            && userInfo.getSub().equals(civilCaseData.getRespondentSolicitor2EmailAddress())) {
+
+            log.info("Return Civil Claim Defendant two party Name if GA Solicitor Email ID "
+                         + "as same as Civil Claim Respondent Solicitor Two Email");
+
+            return gaCaseData.getDefendant2PartyName() + " - Defendant";
+        }
+
+        return StringUtils.EMPTY;
     }
 
     private List<Element<GARespondentResponse>> addResponse(GARespondentResponse gaRespondentResponseBuilder,
@@ -288,16 +412,61 @@ public class RespondToApplicationHandler extends CallbackHandler {
         return newApplication;
     }
 
-    private GARespondentResponse buildResponse(CaseData caseData, UserDetails userDetails) {
+    private GARespondentResponse buildResponse(CaseData caseData, UserInfo userInfo) {
+
+        YesOrNo generalOther = NO;
+        if (Objects.nonNull(caseData.getGeneralAppConsentOrder())) {
+            generalOther = caseData.getGaRespondentConsent();
+        } else if (caseData.getGeneralAppType().getTypes().contains(GeneralApplicationTypes.VARY_PAYMENT_TERMS_OF_JUDGMENT)
+            && caseData.getParentClaimantIsApplicant().equals(NO)
+            && ofNullable(caseData.getGaRespondentDebtorOffer()).isPresent()
+            && caseData.getGaRespondentDebtorOffer().getRespondentDebtorOffer().equals(ACCEPT)) {
+            generalOther = YES;
+        }
 
         GARespondentResponse.GARespondentResponseBuilder gaRespondentResponseBuilder = GARespondentResponse.builder();
-
+        String reason = caseData.getGeneralAppRespondReason();
+        if (Objects.isNull(reason)) {
+            reason = caseData.getGeneralAppRespondConsentReason();
+            if (Objects.isNull(reason)) {
+                reason = getDebtorReason(caseData.getGaRespondentDebtorOffer());
+            }
+        }
         gaRespondentResponseBuilder
-            .generalAppRespondent1Representative(caseData.getGeneralAppRespondent1Representative()
-                                                            .getGeneralAppRespondent1Representative())
-            .gaHearingDetails(populateHearingDetailsResp(caseData))
-            .gaRespondentDetails(userDetails.getId()).build();
+            .generalAppRespondent1Representative(caseData.getGeneralAppRespondent1Representative() == null
+                                                     ? generalOther
+                                                     : caseData.getGeneralAppRespondent1Representative()
+                .getGeneralAppRespondent1Representative())
+            .gaHearingDetails(populateHearingDetailsResp(caseData, userInfo))
+            .gaRespondentResponseReason(reason)
+            .gaRespondentDetails(userInfo.getUid()).build();
 
         return gaRespondentResponseBuilder.build();
+    }
+
+    private String getDebtorReason(GARespondentDebtorOfferGAspec gaRespondentDebtorOffer) {
+        if (Objects.nonNull(gaRespondentDebtorOffer)
+                && gaRespondentDebtorOffer.getRespondentDebtorOffer().equals(DECLINE)) {
+            StringBuilder sb = new StringBuilder();
+            sb.append("Proposed payment plan is ")
+                    .append(gaRespondentDebtorOffer.getPaymentPlan().getDisplayedValue())
+                    .append(". ");
+            if (gaRespondentDebtorOffer.getPaymentPlan().equals(GADebtorPaymentPlanGAspec.INSTALMENT)) {
+                BigDecimal pounds = gaRespondentDebtorOffer.getMonthlyInstalment()
+                        .divide(BigDecimal.valueOf(100), 2, RoundingMode.HALF_UP);
+                sb.append("Proposed instalments per month is ")
+                        .append(pounds)
+                        .append(" pounds. ");
+            } else {
+                sb.append("Proposed set date is ")
+                        .append(DateFormatHelper
+                                .formatLocalDate(gaRespondentDebtorOffer.getPaymentSetDate(), "d MMMM yyyy"))
+                        .append(". ");
+            }
+            sb.append("Objections to the debtor's proposals is ")
+                    .append(gaRespondentDebtorOffer.getDebtorObjections());
+            return sb.toString();
+        }
+        return null;
     }
 }
