@@ -6,15 +6,17 @@ import org.camunda.bpm.client.task.ExternalTask;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnExpression;
 import org.springframework.stereotype.Component;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
+import uk.gov.hmcts.reform.civil.enums.YesOrNo;
 import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
+import uk.gov.hmcts.reform.civil.model.CaseData;
 import uk.gov.hmcts.reform.civil.service.CoreCaseDataService;
 import uk.gov.hmcts.reform.civil.service.search.CaseStateSearchService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.time.LocalDateTime.now;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.CHANGE_STATE_TO_AWAITING_JUDICIAL_DECISION;
+import static uk.gov.hmcts.reform.civil.callback.CaseEvent.RESPONDENT_RESPONSE_DEADLINE_CHECK;
 import static uk.gov.hmcts.reform.civil.enums.CaseState.AWAITING_RESPONDENT_RESPONSE;
 
 @Slf4j
@@ -34,7 +36,22 @@ public class GAResponseDeadlineTaskHandler implements BaseExternalTaskHandler {
         List<CaseDetails> cases = getAwaitingResponseCasesThatArePastDueDate();
         log.info("Job '{}' found {} case(s)", externalTask.getTopicName(), cases.size());
 
+        cases.forEach(this::deleteDashboardNotifications);
         cases.forEach(this::fireEventForStateChange);
+    }
+
+    private void deleteDashboardNotifications(CaseDetails caseDetails) {
+        Long caseId = caseDetails.getId();
+        CaseData caseData = caseDetailsConverter.toCaseData(caseDetails);
+        log.info("Firing Event to delete dashboard notification caseId: {}", caseId);
+        if (YesOrNo.YES == caseData.getIsGaApplicantLip() || YesOrNo.YES == caseData.getIsGaRespondentOneLip()) {
+            try {
+                log.info("calling triggerEvent");
+                coreCaseDataService.triggerEvent(caseId, RESPONDENT_RESPONSE_DEADLINE_CHECK);
+            } catch (Exception e) {
+                log.error("Error in GAResponseDeadlineTaskHandler::deleteDashboardNotifications: " + e);
+            }
+        }
     }
 
     private void fireEventForStateChange(CaseDetails caseDetails) {
@@ -42,17 +59,29 @@ public class GAResponseDeadlineTaskHandler implements BaseExternalTaskHandler {
         log.info("Firing event CHANGE_STATE_TO_AWAITING_JUDICIAL_DECISION to change the state from "
                      + "AWAITING_RESPONDENT_RESPONSE to APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION "
                      + "for caseId: {}", caseId);
-        coreCaseDataService.triggerEvent(caseId, CHANGE_STATE_TO_AWAITING_JUDICIAL_DECISION);
+        try {
+            coreCaseDataService.triggerEvent(caseId, CHANGE_STATE_TO_AWAITING_JUDICIAL_DECISION);
+        } catch (Exception e) {
+            log.error("Error in GAResponseDeadlineTaskHandler::fireEventForStateChange: " + e);
+        }
     }
 
-    private List<CaseDetails> getAwaitingResponseCasesThatArePastDueDate() {
+    protected List<CaseDetails> getAwaitingResponseCasesThatArePastDueDate() {
         List<CaseDetails> awaitingResponseCases = caseSearchService
             .getGeneralApplications(AWAITING_RESPONDENT_RESPONSE);
+
         return awaitingResponseCases.stream()
-            .filter(a -> caseDetailsConverter.toCaseData(a).getGeneralAppNotificationDeadlineDate() != null
-                && now().isAfter(
-                caseDetailsConverter.toCaseData(a).getGeneralAppNotificationDeadlineDate()))
-            .collect(Collectors.toList());
+            .filter(a -> {
+                try {
+                    return caseDetailsConverter.toCaseData(a).getGeneralAppNotificationDeadlineDate() != null
+                        && now().isAfter(
+                        caseDetailsConverter.toCaseData(a).getGeneralAppNotificationDeadlineDate());
+                } catch (Exception e) {
+                    log.error("GAResponseDeadlineTaskHandler failed: " + e);
+                }
+                return false;
+            })
+            .toList();
     }
 
     @Override
